# python_de_learning_2025

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  SCRIPTS_README.md  requirements.txt  setup.cfg
data/: example.json
notebooks/: 000_playground.ipynb  001_Python_Basics_Sahil_s_Practice_Day_1_and_2_Intro_and_String_Numbers.ipynb  002_Python_Basics_Sahil_s_Practice_Day_3_List_set_Dict_Tuple.ipynb  003_python_Basics_SaidhulSir_file.ipynb
scripts/: dev_bootstrap.sh  example_cli.py  qa.sh  session_2025-08-24_1237.sh  venv.sh
src/sahil_py/: utils.py
tests/: test_utils.py
