[metadata]
name = sahil-py
version = 0.1.0
author = Sahil Gundu
description = Learning repo for Data Engineering (Python 2025)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sahilg135/python_de_learning_2025
license = MIT

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where = src
